your commit message here

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- FAVICON (INLINE SVG) -->
   <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2218%22 fill=%22%23ff7a00%22/><text x=%2250%25%22 y=%2258%25%22 font-family=%22Arial%22 font-weight=%22700%22 font-size=%2256%22 text-anchor=%22middle%22 fill=%22white%22>C9</text></svg>"/>
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2218%22 fill=%22%23ff7a00%22/><text x=%2250%25%22 y=%2258%25%22 font-family=%22Arial%22 font-weight=%22700%22 font-size=%2256%22 text-anchor=%22middle%22 fill=%22white%22>C9</text></svg>" />
 
   <!-- FONTS (INTER + POPPINS) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -140,23 +140,25 @@
 
         <div class="grid-3">
           <div class="card">
-            <img src="img/logoVI.jpg" alt="Logo and Visual Identity samples"
+            <img src="img/logoVI.jpg" alt="Logo and Visual Identity samples" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
             <h3>Logo &amp; Visual Identity</h3>
-            <p>Logos, color systems, typography, and brand guides that scale with you.</p>
+            <p>Build a brand identity that grows with your vision—logos that inspire, color systems that connect,
+              typography that communicates, and brand guides that scale seamlessly. Everything designed to keep your
+              brand consistent, professional, and memorable at every stage.</p>
             <a class="btn btn-outline"
               href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
           <div class="card">
-            <img src="img/productdesign.jpg" alt="Product and package design examples"
+            <img src="img/productdesign.jpg" alt="Product and package design examples" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
             <h3>Product &amp; Package Design</h3>
             <p>
               Our team is made up of passionate visual makers, creative designers, skilled content creators, editors,
               and animators. Backed by meticulous post-production and flawless execution, CloudNine Media ensures your
-              brand not only shines — but outshines.
+              brand not only shines — but truly outshines expectations.
             </p>
             <a class="btn btn-outline"
               href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
@@ -164,10 +166,12 @@
           </div>
 
           <div class="card">
-            <img src="img/socialdesign.jpg" alt="Social media management visuals"
+            <img src="img/socialdesign.jpg" alt="Social media management visuals" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
             <h3>Social Media Management</h3>
-            <p>Beautiful, fast websites that convert—with ongoing care if you need it.</p>
+            <p>We craft beautiful, fast social media strategies that convert attention into engagement and followers
+              into customers. From content creation to analytics and ongoing care, we ensure your brand stays
+              consistent, visible, and impactful across every platform that matters.</p>
             <a class="btn btn-outline"
               href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
               Started</a>
@@ -177,27 +181,33 @@
             <img src="img/bookD.jpg" alt="Book cover design gallery"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
             <h3>Book Cover Design</h3>
-            <p>Fiction, non-fiction, academic—covers that capture attention and genre.</p>
+            <p>From striking fiction to insightful non-fiction and scholarly academic works, we design book covers that
+              capture attention instantly, reflect genre with precision, and resonate with readers. Every cover blends
+              creativity and strategy to ensure lasting impact and recognition.</p>
             <a class="btn btn-outline"
               href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
           <div class="card">
-            <img src="img/cloud.jpg" alt="Company profile and story design"
+            <img src="img/cloud.jpg" alt="Company profile and story design" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
             <h3>Company Profile &amp; Story</h3>
-            <p>Clear, persuasive profiles that sell your vision and capability.</p>
+            <p>Craft clear, persuasive profiles that highlight your vision, expertise, and capability. Designed to
+              impress, they communicate value with precision, build trust with your audience, and position you as the
+              professional choice for opportunities, partnerships, and growth.</p>
             <a class="btn btn-outline"
               href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
           <div class="card">
-            <img src="img/marketdesign.jpg" alt="Marketing collateral samples"
+            <img src="img/marketdesign.jpg" alt="Marketing collateral samples" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
             <h3>Marketing Collateral</h3>
-            <p>Pitch decks, social kits, brochures, and all the little brand details.</p>
+            <p>From impactful pitch decks and engaging social kits to polished brochures and every essential brand
+              detail, we design materials that communicate with clarity, consistency, and style—helping your brand stand
+              out, connect with audiences, and drive lasting impressions.</p>
             <a class="btn btn-outline"
               href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
               Started</a>
@@ -267,7 +277,7 @@
            ABOUT SECTION
          ============================ -->
     <section id="about">
-      <div class="container about">
+      <div class="container about ">
         <div class="hero-card">
           <div class="tag">
             <h2>About Us</h2>
@@ -299,43 +309,43 @@
             </ul>
           </div>
         </div>
+      </div>
 
+      <div class="container about">
         <div class="hero-card">
           <div class="tag">Vision Statement</div>
           <div class="divider"></div>
           <p>
-            <a>To be one of the world’s
-              most respected media companies
-              creating and promoting world-class visuals that inspire,
-              connect, and endure.</a>
+            To be one of the world’s
+            most respected media companies
+            creating and promoting world-class visuals that inspire,
+            connect, and endure.
           </p>
         </div>
-      </div>
 
-      <div class="hero-card">
-        <div class="tag">Mission Statement</div>
-        <div class="divider"></div>
-        <p>
-          Our mission is to craft visuals that connect
-          brands with their ideal audience.
-          Through top-notch design and visual storytelling,
-          we help businesses explain, inspire, advocate, and motivate
-          telling stories straight from the heart.
-        </p>
-      </div>
-      </div>
+        <div class="hero-card">
+          <div class="tag">Mission Statement</div>
+          <div class="divider"></div>
+          <p>
+            Our mission is to craft visuals that connect
+            brands with their ideal audience.
+            Through top-notch design and visual storytelling,
+            we help businesses explain, inspire, advocate, and motivate
+            telling stories straight from the heart.
+          </p>
+        </div>
 
-      <div class="hero-card">
-        <div class="tag">Why brands choose us</div>
-        <div class="divider"></div>
-        <p>
-          We keep things simple---clear pricing, rapid drafts, and frequent communication. Most projects kick off with
-          a 30-minute consult to align on goals, audience, and success metrics.
-        </p>
-        <a class="btn"
-          href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20book%20a%20free%20consult.">Book
-          a Free Consult</a>
-      </div>
+        <div class="hero-card">
+          <div class="tag">Why brands choose us</div>
+          <div class="divider"></div>
+          <p>
+            We keep things simple---clear pricing, rapid drafts, and frequent communication. Most projects kick off with
+            a 30-minute consult to align on goals, audience, and success metrics.
+          </p>
+          <a class="btn"
+            href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20book%20a%20free%20consult.">Book
+            a Free Consult</a>
+        </div>
       </div>
     </section>
 
@@ -473,6 +483,14 @@
           <p>
             <b>CloudNine Media</b><br />Block 1, Plot 2, Omololu Olunloyo GRA, Adeoyo, Ring Road, Ibadan, Nigeria.
           </p>
+
+          <div class="map-wrap">
+            <iframe src="https://www.google.com/maps?q=CloudNine%20Media%2C%20Ibadan&output=embed" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade" allowfullscreen>
+            </iframe>
+          </div>
+
+
           <p>
             <a href="mailto:cloudninegloballimited@gmail.com">cloudninegloballimited@gmail.com</a><br />
             <a href="tel:+2348065959001">+234 806 595 9001</a>
