your commit message here

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <span class="badge">Since 2017</span>
             <span class="badge">Ibadan • NG</span>
             <span class="badge">Fast Turnaround</span>
+             <span class="badge">Trusted Service</span>
           </div>
 
           <!-- STATS -->
