your commit message here

--- a/index.html
+++ b/index.html
@@ -270,6 +270,22 @@
             <img src="img/photo3.jpg" alt="Digital painting" loading="lazy" decoding="async" />
             <div class="foliobar"><span>Digital Painting</span><span>→</span></div>
           </a>
+
+          <a class="folio" aria-label="Art & Craft">
+            <img src="img/craft.jpg" alt="Art & Craft" loading="lazy" decoding="async" />
+            <div class="foliobar"><span>Art & Craft</span><span>→</span></div>
+          </a>
+
+          <a class="folio" aria-label="3D Modeling & Visualization">
+            <img src="img/3D.jpg" alt="3D Modeling & Visualization" loading="lazy" decoding="async" />
+            <div class="foliobar"><span>3D Modeling & Visualization</span><span>→</span></div>
+          </a>
+
+            <a class="folio" aria-label="Presentation Slides">
+            <img src="img/slides.jpg" alt="Presentation Slides" loading="lazy" decoding="async" />
+            <div class="foliobar"><span>Presentation Slides</span><span>→</span></div>
+          </a>
+
         </div>
       </div>
     </section>
