your commit message here

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <div class="hero-actions">
             <a class="btn"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Start
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Start
               a Project</a>
             <a class="btn btn-outline" href="#portfolio">See Portfolio</a>
           </div>
@@ -148,7 +148,7 @@
               typography that communicates, and brand guides that scale seamlessly. Everything designed to keep your
               brand consistent, professional, and memorable at every stage.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
@@ -162,7 +162,7 @@
               brand not only shines — but truly outshines expectations.
             </p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
@@ -174,7 +174,7 @@
               into customers. From content creation to analytics and ongoing care, we ensure your brand stays
               consistent, visible, and impactful across every platform that matters.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
@@ -186,7 +186,7 @@
               capture attention instantly, reflect genre with precision, and resonate with readers. Every cover blends
               creativity and strategy to ensure lasting impact and recognition.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
@@ -198,7 +198,7 @@
               impress, they communicate value with precision, build trust with your audience, and position you as the
               professional choice for opportunities, partnerships, and growth.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
 
@@ -210,7 +210,7 @@
               detail, we design materials that communicate with clarity, consistency, and style—helping your brand stand
               out, connect with audiences, and drive lasting impressions.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
               Started</a>
           </div>
         </div>
@@ -360,7 +360,7 @@
             a 30-minute consult to align on goals, audience, and success metrics.
           </p>
           <a class="btn"
-            href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20book%20a%20free%20consult.">Book
+            href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20schedule%20a%20complimentary%20consultation.">Book
             a Free Consult</a>
         </div>
       </div>
@@ -569,7 +569,7 @@
         ">
       <span class="tag">© <span id="year"></span> CloudNine Media. All rights reserved.</span>
       <a class="btn btn-outline"
-        href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project.">Start
+        href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Start
         a Project</a>
     </div>
   </footer>
@@ -578,7 +578,7 @@
          FLOATING WHATSAPP BUTTON
        ============================ -->
   <div class="wa">
-    <a href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%27d%20like%20to%20start%20a%20project."
+    <a href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project."
       aria-label="WhatsApp Chat">💬</a>
   </div>
 
