your commit message here

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 
           <div class="hero-badges">
             <span class="badge">Since 2017</span>
-            <span class="badge">Ibadan • NG</span>
+            <span class="badge">Nigeria</span>
             <span class="badge">Fast Turnaround</span>
-             <span class="badge">Trusted Service</span>
+            <span class="badge">Trusted Service</span>
           </div>
 
           <!-- STATS -->
@@ -148,7 +148,7 @@
               typography that communicates, and brand guides that scale seamlessly. Everything designed to keep your
               brand consistent, professional, and memorable at every stage.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project%20on%20Logo%20Design.">Get
               Started</a>
           </div>
 
@@ -162,7 +162,7 @@
               brand not only shines — but truly outshines expectations.
             </p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project%20Product%20and%20Package%20Design.">Get
               Started</a>
           </div>
 
@@ -174,7 +174,7 @@
               into customers. From content creation to analytics and ongoing care, we ensure your brand stays
               consistent, visible, and impactful across every platform that matters.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20need%20your%20company%20sevice%20on%20Social%20Media%20Management.">Get
               Started</a>
           </div>
 
@@ -186,31 +186,32 @@
               capture attention instantly, reflect genre with precision, and resonate with readers. Every cover blends
               creativity and strategy to ensure lasting impact and recognition.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project%20on%20Book%20Cover%20Design.">Get
               Started</a>
           </div>
 
           <div class="card">
-            <img src="img/cloud.jpg" alt="Company profile and story design" width="360" height="210"
+            <img src="img/pencildrawing.jpg" alt="Company profile and story design" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
-            <h3>Company Profile &amp; Story</h3>
-            <p>Craft clear, persuasive profiles that highlight your vision, expertise, and capability. Designed to
-              impress, they communicate value with precision, build trust with your audience, and position you as the
-              professional choice for opportunities, partnerships, and growth.</p>
+            <h3>Pencil Drawing</h3>
+            <p>Through finely detailed pencil drawings, we transform simple ideas into timeless works of art. Each
+              stroke captures depth and emotion—whether for portraits, branding concepts, or creative
+              storytelling. Our artistry not only preserves memories but also communicates your essence with clarity,
+              precision, and style.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project%20on%20Pencil%20Drawing.">Get
               Started</a>
           </div>
 
           <div class="card">
             <img src="img/marketdesign.jpg" alt="Marketing collateral samples" width="360" height="210"
               style="width: 400%; border-radius: 20px; margin-bottom: 50px" loading="lazy" decoding="async" />
-            <h3>Marketing Collateral</h3>
-            <p>From impactful pitch decks and engaging social kits to polished brochures and every essential brand
-              detail, we design materials that communicate with clarity, consistency, and style—helping your brand stand
-              out, connect with audiences, and drive lasting impressions.</p>
+            <h3>Brand Marketing </h3>
+            <p>From captivating campaigns and compelling social content to eye-catching flyers and strategic brand
+              assets, we craft marketing materials that deliver clarity, consistency, and impact—helping your brand
+              attract attention, connect with the right audience, and inspire lasting loyalty.</p>
             <a class="btn btn-outline"
-              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20like%20to%20start%20a%20project.">Get
+              href="https://wa.me/+2348065959001?text=Hi%20CloudNine%20Media!%20I%20would%20need%20your%20company%20service%20on%20Brand%20Marketing%20Project.">Get
               Started</a>
           </div>
         </div>
@@ -226,65 +227,80 @@
         <p class="sub">A quick peek at designs we’ve crafted for clients across industries.</p>
 
         <div class="grid-4">
-          <a class="folio" aria-label="Brand Identity sample">
+          <a href="https://www.behance.net/gallery/232643285/BRAND-IDENTITY-FOR-LE-ROCHER" class="folio"
+            aria-label="Brand Identity sample">
             <img src="img/brand.jpg" alt="Brand identity project" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Brand Identity</span><span>→</span></div>
+            <div class="foliobar"><span>Brand Identity</span><span>→<span></div>
           </a>
 
-          <a class="folio" aria-label="Flyer designs">
+          <a href="https://www.behance.net/gallery/232643929/FLYER-DESIGN" class="folio" aria-label="Flyer designs">
             <img src="img/flyerdesign.jpg" alt="Flyer designs" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Flyers</span><span>→</span></div>
+            <div class="foliobar"><span>Flyers</span><span>→<span></div>
           </a>
 
-          <a class="folio" aria-label="Book cover design">
+          <a href="https://www.behance.net/gallery/232641289/BOOK-COVER-DESIGN" class="folio"
+            aria-label="Book cover design">
             <img src="img/bookdesign.jpg" alt="Book cover design" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Book Cover</span><span>→</span></div>
+            <div class="foliobar"><span>Book Cover</span><span>→<span></div>
           </a>
 
           <a class="folio" aria-label="Wall & Interior Decoration">
             <img src="img/wall.jpg" alt="Wall & Interior Decoration" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Wall & Interior Decoration</span><span>→</span></div>
+            <div class="foliobar"><span>Wall & Interior Decoration</span></div>
           </a>
 
           <a class="folio" aria-label="Pencil Drawing">
             <img src="img/pencil.jpg" alt="Pencil drawing artwork" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Pencil Drawing</span><span>→</span></div>
+            <div class="foliobar"><span>Pencil Drawing</span></div>
           </a>
 
-          <a class="folio" aria-label="Social Media Management">
+          <a href="https://www.behance.net/gallery/178913835/SOCIAL-MEDIA-FLYER" class="folio"
+            aria-label="Social Media Management">
             <img src="img/photo4.jpg" alt="Social media kit" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Social Media Management</span><span>→</span></div>
+            <div class="foliobar"><span>Social Media Management</span><span>→<span></div>
           </a>
 
-          <a class="folio" aria-label="Framing">
+          <a href="https://www.behance.net/gallery/232649447/FRAME-WORK" class="folio" aria-label="Framing">
             <img src="img/photo2.jpg" alt="Framed art piece" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Framing</span><span>→</span></div>
+            <div class="foliobar"><span>Framing</span><span>→<span></div>
           </a>
 
-          <a class="folio" aria-label="Logo Design">
+          <a href="https://www.behance.net/gallery/216346457/Brand-Identity-Design" class="folio"
+            aria-label="Logo Design">
             <img src="img/logodesign.jpg" alt="Logo design collection" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Logo Design</span><span>→</span></div>
+            <div class="foliobar"><span>Logo Design</span><span>→<span></div>
           </a>
 
           <a class="folio" aria-label="Digital Painting">
             <img src="img/photo3.jpg" alt="Digital painting" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Digital Painting</span><span>→</span></div>
+            <div class="foliobar"><span>Digital Painting</span></div>
           </a>
 
           <a class="folio" aria-label="Art & Craft">
             <img src="img/craft.jpg" alt="Art & Craft" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Art & Craft</span><span>→</span></div>
+            <div class="foliobar"><span>Art & Craft</span></div>
           </a>
 
-          <a class="folio" aria-label="3D Modeling & Visualization">
+          <a href="https://www.behance.net/gallery/232650717/PRODUCT-DESIGN" class="folio"
+            aria-label="3D Modeling & Visualization">
             <img src="img/3D.jpg" alt="3D Modeling & Visualization" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>3D Modeling & Visualization</span><span>→</span></div>
+            <div class="foliobar"><span>3D Modeling Visualization</span><span>→<span></div>
           </a>
 
-            <a class="folio" aria-label="Presentation Slides">
+          <a class="folio" aria-label="Presentation Slides">
             <img src="img/slides.jpg" alt="Presentation Slides" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Presentation Slides</span><span>→</span></div>
+            <div class="foliobar"><span>Presentation Slides</span></div>
           </a>
+
+           <div class="hero-card">
+          <div class="tag">More Designs?</div>
+          <div class="divider"></div>
+          <p>
+           Want to see more of our designs? Click the button below.
+          </p>
+          <a class="btn"
+            href="https://www.behance.net/adesolaayobami1">See More</a>
+        </div>
 
         </div>
       </div>
