your commit message here

--- a/index.html
+++ b/index.html
@@ -482,13 +482,13 @@
             <label for="service">Service</label>
             <select id="service" name="service">
               <option>Logo &amp; Visual Identity</option>
-              <option>Product &amp; Packaging</option>
+              <option>Product &amp; Packaging Design</option>
               <option>Book Cover Design</option>
               <option>Framing</option>
               <option>Advertising</option>
               <option>Branding</option>
               <option>Social Media Management</option>
-              <option>Marketing Collateral</option>
+              <option>Brand Marketing</option>
               <option>Publishing</option>
               <option>Pencil Drawing</option>
               <option>Wall &amp; Interior Decoration</option>
